<resources>
    <string name="app_name">Paws</string>
    <string name="title_home">Home</string>
    <string name="title_dog_parks">Dog Parks</string>
    <string name="title_reminders">Reminders</string>
    <string name="home_paws">PAWS</string>
    <string name="desc_add">add</string>
    <string name="desc_reminders">reminders</string>
    <string name="HOME_your_dogs">Your Dogs</string>
    <string name="desc_settings">desc_settings</string>
    <string name="dog_name">Dog Name</string>
    <string name="edit_dog_image">edit_dog_image</string>
    <string name="add_new_dog">Add New Dog</string>
    <string name="AddDog_name">Name</string>
    <string name="AddDog_name_hint">Dog\'s name</string>
    <string name="AddDog_breed">Breed</string>
    <string name="AddDog_breed_hint">Select breed</string>
    <string name="AddDog_date_of_birth">Date of Birth</string>
    <string name="AddDog_date_hint">DD/MM/YYYY</string>
    <string name="AddDog_color">Color</string>
    <string name="neutered">Neutered</string>
    <string name="microchipped">Microchipped</string>
    <string name="AddDog_status">Status</string>
    <string name="addDog_BTN_woof">WOOF!</string>
    <string name="dog_personality_tags">Dog Personality Tags</string>
    <string name="app_logo">App logo</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="your_email_com">your@email.com</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="register">Register</string>
    <string name="or_continue_with">or continue with</string>
    <string name="google_login">Google login</string>
    <string name="edit_profile_image">Edit profile image</string>
    <string name="city_country">City, Country</string>
    <string name="experience_with_dogs">Experience with dogs</string>
    <string name="location_optional">Location (Optional)</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="expert">Expert</string>

    <!-- Dog Profile Screen -->
    <string name="dog_name_placeholder">Chubby</string>
    <string name="breed_age_placeholder">Great Pyrenees • 1 years old</string>
    <string name="color_placeholder">Color\nPyrenees</string>
    <string name="weight_placeholder">Weight\n39kg</string>
    <string name="birthday_placeholder">Birthday\nFeb 14</string>
    <string name="tags_personality_title">Tags and Personality</string>
    <string name="care_activities_title">Care and Activities</string>

    <!-- Content descriptions -->
    <string name="dog_default_image">Dog profile image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="back">Back</string>
    <string name="add_dog">Add dog</string>


    <string name="home_quick_actions">Quick Access</string>
    <string name="home_quick_action_reminders">Reminders</string>
    <string name="home_quick_action_map">Map</string>
    <string name="home_quick_action_settings">Settings</string>


    <!-- Home screen titles -->
    <string name="home_dog_parks">Dog Parks</string>
    <string name="home_view_all">View all</string>
    <string name="home_map_preview">Map preview</string>
    <string name="home_upcoming_reminders">Upcoming Reminders</string>


    <!-- Reminders screen -->
    <string name="reminders_title">Reminders</string>
    <string name="previous_month">Previous month</string>
    <string name="next_month">Next month</string>
    <string name="todays_reminders">Today\'s Reminders</string>
    <string name="no_reminders_yet">No reminders yet</string>
    <string name="tap_plus_to_add_first_reminder">Tap the + button to add your first reminder</string>
    <string name="desc_add_reminder">Add reminder</string>


    <string name="you_can_always_update_your_profile_later">You can always update your profile later</string>


    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="change_photo">Change photo</string>
    <string name="display_name">Display name</string>






    <string name="choose_image_source">Choose image source</string>
    <string name="choose_from_phone">Choose from phone</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="camera_permission_required">Camera permission is required</string>
    <string name="please_enter_display_name">Please enter a display name</string>
    <string name="profile_updated">Profile updated</string>

    <string name="logout">Logout</string>
    <string name="dog_profile_title">Dog Profile</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="add_favorite_park">Add Favorite Park</string>



        <!-- Dog Parks header/search -->
        <string name="HOME_nearby_dog_parks">Dog Parks</string>
        <string name="search_dog_parks">Search for dog parks</string>
        <string name="get_location">Get my location</string>

        <!-- Bottom bar + states -->
        <string name="set_favorite_park">Set Favorite Park</string>
        <string name="pick_favorite_hint">Pick a marker or long-press anywhere to choose your favorite spot</string>
        <string name="selected_park_hint">Selected: %1$s</string>
        <string name="custom_selected_hint">Selected a custom location</string>
        <string name="pick_location_first">Pick a park or long-press on the map first</string>
        <string name="favorite_saved">Favorite park saved</string>
        <string name="custom_point">Custom point</string>
        <string name="confirm_favorite_msg">Set “%1$s” as your favorite park?</string>

        <!-- Permission dialog -->
        <string name="location_permission_title">Location Permission</string>
        <string name="location_permission_msg">To center the map and find parks near you we need access to your location. You can still browse sample parks without it.</string>
        <string name="grant_permission">Grant Permission</string>
        <string name="browse_anyway">Browse anyway</string>

        <!-- Common -->
        <string name="save">Save</string>
        <string name="cancel">Cancel</string>


    <string name="favorite_name_hint">Favorite park name</string>
    <string name="default_favorite_name">My Favorite Park</string>
    <string name="coords_fmt">Selected location: %1$s</string>
    <string name="long_press_tip">Tip: long-press on the map to choose a custom spot</string>
    <string name="poop_log">Poop Log</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="you_example_com">you@example.com</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="_1">1</string>

    <!-- Weight log strings -->
    <string name="weight_log_title">Weight</string>
    <string name="add_weight">Add Weight</string>
    <string name="edit_weight">Edit Weight</string>
    <string name="no_weights_yet">No weight entries yet</string>
    <string name="tap_plus_to_add_first_weight">Tap the + button to add your first weight</string>
    <string name="weight_input_hint">Weight (kg)</string>
    <string name="please_enter_weight">Please enter a weight</string>
    <string name="weight_saved">Weight saved</string>
    <string name="weight_updated">Weight updated</string>
    <string name="weight_deleted">Weight deleted</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="go_to_map"><![CDATA[Go to map >]]></string>

</resources>