<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="32dp">

    <!-- App Logo -->
    <ImageView
        android:id="@+id/login_img_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/paws_logo" />


    <!-- Subtitle -->
    <TextView
        android:id="@+id/login_txt_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_l"
        android:text="@string/sign_in_to_continue"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_body" />

    <!-- Email Label -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_body" />

    <!-- Email Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_l"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/button_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/button_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/button_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/button_corner_radius">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_EDT_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_email_com"
            android:inputType="textEmailAddress"
            android:padding="@dimen/margin_m" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Label -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_body" />

    <!-- Password Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/button_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/button_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/button_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/button_corner_radius">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_EDT_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="@dimen/margin_m" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Sign In Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_BTN_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_l"
        android:layout_marginBottom="@dimen/margin_m"
        android:paddingVertical="@dimen/padding_14"
        android:text="@string/sign_in"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_body"
        android:textStyle="bold"
        app:backgroundTint="@color/Primary_yellow"
        app:cornerRadius="@dimen/button_icon_round"
        app:iconPadding="0dp" />


    <!-- Register link -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_xl"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:paddingRight="@dimen/padding_xs"/>

        <TextView
            android:id="@+id/login_txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/Primary_pink"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>
