<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <!-- HOME -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.danono.paws.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_navigation_home_to_addDogFragment"
            app:destination="@id/addDogFragment" />

    </fragment>

    <!-- HOME - ADD DOG -->
    <fragment
        android:id="@+id/addDogFragment"
        android:name="com.danono.paws.ui.mydogs.AddDogFragment"
        android:label="Add Dog" />

    <!-- _________ -->
    <fragment
        android:id="@+id/navigation_reminders"
        android:name="com.danono.paws.ui.reminders.RemindersFragment"
        android:label="@string/title_reminders"
        tools:layout="@layout/fragment_reminders" />

    <fragment
        android:id="@+id/navigation_dog_parks"
        android:name="com.danono.paws.ui.dog_parks.DogParksFragment"
        android:label="@string/title_dog_parks"
        tools:layout="@layout/fragment_dog_parks" />
</navigation>