<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/home_LAY_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_l"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/home_txt_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home_paws"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_headline" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/home_fab_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:contentDescription="@string/desc_reminders"
                app:backgroundTint="@color/black"
                app:fabSize="mini"
                app:maxImageSize="@dimen/icon_size_fab_mini"
                app:srcCompat="@drawable/calendar_ic"
                app:tint="@android:color/white" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_dog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_settings"
                app:backgroundTint="@color/black"
                app:fabSize="mini"
                app:maxImageSize="@dimen/icon_size_fab_mini"
                app:srcCompat="@drawable/round_add_24"
                app:tint="@android:color/white" />
        </LinearLayout>
    </LinearLayout>


        <TextView
            android:id="@+id/home_TXT_your_dogs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HOME_your_dogs"
            android:layout_margin="@dimen/margin_l"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"/>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_RV_dogs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_l"
        android:layout_marginEnd="@dimen/margin_l"
        android:layout_marginTop="@dimen/margin_m"
        android:orientation="horizontal"
        android:clipToPadding="false"
        android:paddingBottom="8dp"/>








    </androidx.appcompat.widget.LinearLayoutCompat>

